Add server-side syntax highlighting

--- a/internal/web/static/index.html
+++ b/internal/web/static/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>repobook</title>
     <link rel="stylesheet" href="/app/styles.css" />
+    <link rel="stylesheet" href="/app/chroma-github.css" />
   </head>
   <body>
     <div id="app" class="app">
