--- a/internal/web/static/index.html
+++ b/internal/web/static/index.html
@@ -10,7 +10,10 @@
   <body>
     <div id="app" class="app">
       <aside class="pane nav">
-        <div class="pane-title">Documents</div>
+        <div class="pane-title nav-title">
+          <span>Documents</span>
+          <button id="navToggle" class="nav-toggle" type="button" aria-label="Toggle navigation collapse"></button>
+        </div>
         <div class="nav-search">
           <input id="search" class="search-input" type="search" placeholder="Search markdown…" autocomplete="off" />
           <div id="searchMeta" class="search-meta"></div>
